Add my own ~/.cookiecutterrc for default vals

--- a/cookiecutter/Dockerfile
+++ b/cookiecutter/Dockerfile
@@ -6,4 +6,6 @@ WORKDIR /mnt
 RUN apk add --no-cache git && \
     pip install cookiecutter
 
+ADD .cookiecutterrc /root/
+
 ENTRYPOINT ["cookiecutter"]
